@@ -28,8 +28,7 @@
 % htmlw.4ht (|version), generated from |jobname.tex
 % Copyright (C) |CopyYear.2000. Eitan M. Gurari
 % Copyright (C) 2009, 2010 TeX Users Group
-|<TeX4ht copyright|>
-\immediate\write-1{version |version}
+|<TeX4ht copywrite|>
 >>>
 
 
